sam-internal/k8s-out/prd/prd-minikube-small-flowsnake/client_namespaces.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Namespace
  metadata:
    annotations:
      sfdc.net/flowsnake.owner_name: Flowsnake
      sfdc.net/pki-namespace: flowsnake_test
    labels:
      madkub-injector: enabled
    name: flowsnake-test
kind: List
metadata: {}
