sam-internal/k8s-out/prd/prd-minikube-small-flowsnake/cert-secretizer.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: cert-secretizer
  namespace: flowsnake
spec:
  minReadySeconds: 45
  replicas: 1
  template:
    metadata:
      annotations:
        madkub.sam.sfdc.net/allcerts: '{"certreqs": [{"cert-type": "server", "kingdom":
          "prd", "name": "ingresscerts", "role": "flowsnake", "san": ["prd-minikube-small-flowsnake.data.sfdc.net"]}]}'
      labels:
        name: cert-secretizer
    spec:
      containers:
      - env:
        - name: FLOWSNAKE_FLEET
          valueFrom:
            configMapKeyRef:
              key: name
              name: fleet-config
        - name: KUBECONFIG
          valueFrom:
            configMapKeyRef:
              key: kubeconfig
              name: fleet-config
        image: minikube/flowsnake-cert-secretizer:minikube
        imagePullPolicy: Never
        name: cert-secretizer
        volumeMounts:
        - mountPath: /certToSecretConfigs
          name: certs-to-secrets
        - mountPath: /certs
          name: datacerts
        - mountPath: /etc/flowsnake/config/auth-namespaces
          name: auth-namespaces
          readOnly: true
      - args:
        - /sam/madkub-client
        - --madkub-endpoint
        - https://madkubserver:32007
        - --maddog-endpoint
        - https://maddog-onebox:8443
        - --maddog-server-ca
        - /sc/ca/security-ca.pem
        - --madkub-server-ca
        - /sc/ca/ca.pem
        - --token-folder
        - /tokens
        - --kingdom
        - prd
        - --superpod
        - None
        - --estate
        - prd-minikube-small-flowsnake
        - --refresher
        - --run-init-for-refresher-mode
        - --cert-folders
        - ingresscerts:/certs
        image: ops0-artifactrepo1-0-prd.data.sfdc.net/tnrp/sam/madkub:1.0.0-0000062-dca2d8d1
        name: sam-madkub-integration-refresher
        resources: {}
        volumeMounts:
        - mountPath: /certs
          name: datacerts
        - mountPath: /tokens
          name: tokens
        - mountPath: /sc
          name: maddog-onebox-certs
      restartPolicy: Always
      volumes:
      - configMap:
          name: certs-to-secrets
        name: certs-to-secrets
      - emptyDir:
          medium: Memory
        name: datacerts
      - emptyDir:
          medium: Memory
        name: tokens
      - configMap:
          name: auth-namespaces
        name: auth-namespaces
      - hostPath:
          path: /tmp/sc_repo
        name: maddog-onebox-certs
