sam-internal/k8s-out/prd/prd-minikube-small-flowsnake/ingress-controller-default-backend.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: default-http-backend
  name: default-http-backend
  namespace: flowsnake
spec:
  replicas: 1
  selector:
    matchLabels:
      app: default-http-backend
  template:
    metadata:
      labels:
        app: default-http-backend
        flowsnakeOwner: dva-transform
        flowsnakeRole: DefaultHttpBackend
        name: default-http-backend
    spec:
      containers:
      - image: minikube/flowsnake-ingress-default-backend:minikube
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 30
          timeoutSeconds: 5
        name: default-http-backend
        ports:
        - containerPort: 8080
        resources:
          limits:
            cpu: 10m
            memory: 20Mi
          requests:
            cpu: 10m
            memory: 20Mi
      terminationGracePeriodSeconds: 60
