sam-internal/k8s-out/prd/prd-minikube-small-flowsnake/integration-test-data-rc.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    name: flowsnake-test-data
  name: flowsnake-test-data
  namespace: flowsnake
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flowsnake-test-data
  template:
    metadata:
      labels:
        app: flowsnake-test-data
        flowsnakeOwner: dva-transform
        flowsnakeRole: FlowsnakeTestData
    spec:
      containers:
      - image: minikube/flowsnake-test-data:minikube
        imagePullPolicy: Never
        name: test-data
        ports:
        - containerPort: 80
          name: k80
      terminationGracePeriodSeconds: 60
