sam-internal/k8s-out/prd/prd-minikube-small-flowsnake/kubeapi-monitor.yaml
apiVersion: v1
items:
- apiVersion: v1
  data:
    check-kubeapi.sh: |
      [...]
  kind: ConfigMap
  metadata:
    name: kubeapi-monitor-scripts
    namespace: flowsnake
- apiVersion: extensions/v1beta1
  kind: DaemonSet
  metadata:
    name: kubeapi-monitor
    namespace: flowsnake
  spec:
    selector:
      matchLabels:
        app: kubeapi-monitor
        apptype: monitoring
    template:
      metadata:
        labels:
          app: kubeapi-monitor
          apptype: monitoring
          flowsnakeOwner: dva-transform
          flowsnakeRole: KubeapiMonitor
      spec:
        containers:
        - command:
          - /kubeapi-monitor-scripts/check-kubeapi.sh
          image: minikube/sfdc_centos7_jdk8:33
          imagePullPolicy: Never
          name: kubeapi-monitor
          resources:
            limits:
              cpu: "0.1"
              memory: 100Mi
            requests:
              cpu: "0.1"
              memory: 100Mi
          volumeMounts:
          - mountPath: /kubeapi-monitor-scripts
            name: kubeapi-monitor-scripts
        hostNetwork: false
        restartPolicy: Always
        volumes:
        - configMap:
            defaultMode: 493
            name: kubeapi-monitor-scripts
          name: kubeapi-monitor-scripts
kind: List
metadata: {}
