sam-internal/k8s-out/prd/prd-minikube-small-flowsnake/maddog-onebox-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    service: maddog-onebox
  name: maddog-onebox
  namespace: flowsnake
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        service: maddog-onebox
    spec:
      containers:
      - image: ops0-artifactrepo1-0-prd.data.sfdc.net/docker-sam/cdebains/maddog-onebox:willversion
        imagePullPolicy: Never
        name: maddog-onebox
        ports:
        - containerPort: 8443
        volumeMounts:
        - mountPath: /tmp/sc_repo
          name: maddog-onebox-certs
      volumes:
      - hostPath:
          path: /tmp/sc_repo
        name: maddog-onebox-certs
