sam-internal/k8s-out/prd/prd-minikube-small-flowsnake/madkubserver.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    service: madkubserver
  name: madkubserver
  namespace: flowsnake
spec:
  minReadySeconds: 45
  replicas: 1
  template:
    metadata:
      labels:
        service: madkubserver
    spec:
      containers:
      - args:
        - /sam/madkub-server
        - --listen
        - 0.0.0.0:32007
        - -d
        - --maddog-endpoint
        - https://maddog-onebox:8443
        - --kubeconfig
        - /fake/kubernetes/kubeconfig
        - --client-cert
        - /maddog-onebox/client_chain.pem
        - --client-key
        - /maddog-onebox/client-key.pem
        - --maddog-server-ca
        - /maddog-onebox/ca/security-ca.pem
        - --cert-folder
        - /certs/
        - --token-folder
        - /tokens/
        - --service-hostname
        - madkubserver
        - --kingdom
        - prd
        - --estate
        - prd-minikube-small-flowsnake
        - --log-level
        - "7"
        image: ops0-artifactrepo1-0-prd.data.sfdc.net/tnrp/sam/madkub:1.0.0-0000062-dca2d8d1
        livenessProbe:
          httpGet:
            path: /healthz
            port: 32007
            scheme: HTTPS
          initialDelaySeconds: 30
          periodSeconds: 10
        name: madkubserver
        ports:
        - containerPort: 32007
        volumeMounts:
        - mountPath: /fake/kubernetes
          name: kubeconfig
        - mountPath: /certs
          name: datacerts
        - mountPath: /tokens
          name: tokens
        - mountPath: /maddog-onebox
          name: maddog-onebox-certs
      - args:
        - /sam/madkub-client
        - --madkub-endpoint
        - ""
        - --maddog-endpoint
        - https://maddog-onebox:8443
        - --maddog-server-ca
        - /maddog-onebox/ca/security-ca.pem
        - --madkub-server-ca
        - /maddog-onebox/ca/ca.pem
        - --token-folder
        - /tokens/
        - --refresher
        - --refresher-token-grace-period
        - 30s
        - --kingdom
        - prd
        - --cert-folders
        - madkubInternalCert:/certs/
        - --log-level
        - "7"
        image: ops0-artifactrepo1-0-prd.data.sfdc.net/tnrp/sam/madkub:1.0.0-0000062-dca2d8d1
        name: madkub-refresher
        volumeMounts:
        - mountPath: /certs
          name: datacerts
        - mountPath: /tokens
          name: tokens
        - mountPath: /maddog-onebox
          name: maddog-onebox-certs
      restartPolicy: Always
      volumes:
      - emptyDir:
          medium: Memory
        name: datacerts
      - emptyDir:
          medium: Memory
        name: tokens
      - configMap:
          name: minikube-empty-kubeconfig
        name: kubeconfig
      - hostPath:
          path: /tmp/sc_repo
        name: maddog-onebox-certs
