sam-internal/k8s-out/prd/prd-minikube-small-flowsnake/nginx-ingress-controller-rc.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    k8s-app: nginx-ingress-lb
    name: nginx-ingress-lb
  name: nginx-ingress-controller
  namespace: flowsnake
spec:
  replicas: 1
  selector:
    matchLabels:
      k8s-app: nginx-ingress-lb
  template:
    metadata:
      labels:
        flowsnakeOwner: dva-transform
        flowsnakeRole: NginxIngressController
        k8s-app: nginx-ingress-lb
        name: nginx-ingress-lb
    spec:
      containers:
      - args:
        - --default-backend-service=$(POD_NAMESPACE)/default-http-backend
        - --sync-period=30s
        image: minikube/flowsnake-ingress-controller-nginx:minikube
        imagePullPolicy: Never
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 1
        name: nginx-ingress-lb
        ports:
        - containerPort: 80
          hostPort: 80
        - containerPort: 443
          hostPort: 443
        readinessProbe:
          httpGet:
            path: /healthz
            port: 80
            scheme: HTTP
        volumeMounts:
        - mountPath: /etc/ssl/certs
          name: flowsnake-tls-secret
          readOnly: true
      terminationGracePeriodSeconds: 60
      volumes:
      - name: flowsnake-tls-secret
        secret:
          secretName: flowsnake-tls
