sam-internal/k8s-out/prd/prd-minikube-small-flowsnake/prometheus-funnel.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    service: prometheus-scraper
  name: prometheus-scraper
  namespace: flowsnake
spec:
  minReadySeconds: 15
  replicas: 1
  selector:
    matchLabels:
      service: prometheus-scraper
  template:
    metadata:
      labels:
        apptype: monitoring
        flowsnakeOwner: dva-transform
        flowsnakeRole: PrometheusScraper
        service: prometheus-scraper
    spec:
      containers:
      - args:
        - --config.file=/etc/config/prometheus.json
        - --storage.tsdb.path=/prometheus-storage
        - --web.external-url=http://localhost/
        - --web.enable-lifecycle
        image: minikube/prome_for_k8s:34
        livenessProbe:
          httpGet:
            path: /metrics
            port: 9090
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
        name: prometheus
        ports:
        - containerPort: 9090
        volumeMounts:
        - mountPath: /prometheus-storage
          name: prometheus-storage-volume
        - mountPath: /etc/config
          name: prometheus-server-conf
      - args:
        - --serviceName=flowsnake
        - --subserviceName=NONE
        - --tagDefault=superpod:NONE
        - --tagDefault=datacenter:prd
        - --tagDefault=estate:prd-minikube-small-flowsnake
        - --batchSize=512
        - --funnelUrl=http://ajna0-funnel1-0-prd.data.sfdc.net:80
        image: minikube/funnel_writer:34
        livenessProbe:
          httpGet:
            path: /
            port: 8000
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
        name: funnel-writer
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /prometheus-storage
          name: prometheus-storage-volume
      restartPolicy: Always
      serviceAccountName: prometheus-scraper
      volumes:
      - configMap:
          name: prometheus-server-conf
        name: prometheus-server-conf
      - emptyDir:
          medium: Memory
        name: prometheus-storage-volume
