sam-internal/k8s-out/prd/prd-minikube-small-flowsnake/spark-operator-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: spark-operator
    app.kubernetes.io/version: v2.4.0-v1beta1
  name: spark-operator
  namespace: flowsnake
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: spark-operator
      app.kubernetes.io/version: v2.4.0-v1beta1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: spark-operator
        app.kubernetes.io/version: v2.4.0-v1beta1
    spec:
      containers:
      - args:
        - -logtostderr
        - -v=2
        - -enable-metrics=true
        - -metrics-endpoint=/metrics
        - -metrics-port=10254
        command:
        - /usr/bin/spark-operator
        image: minikube/kubernetes-spark-operator-2.4.0-sfdc-0.0.1:minikube
        imagePullPolicy: Always
        name: spark-operator
        ports:
        - containerPort: 10254
          name: metrics
          protocol: TCP
      serviceAccountName: spark-operator-serviceaccount
