sam-internal/k8s-out/prd/prd-minikube-small-flowsnake/madkubserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    service: madkubserver
  name: madkubserver
  namespace: flowsnake
spec:
  ports:
  - name: "32007"
    port: 32007
    targetPort: 32007
  selector:
    service: madkubserver
status:
  loadBalancer: {}
