sam-internal/k8s-out/prd/prd-minikube-small-flowsnake/minikube-test-data-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flowsnake-test-data
  namespace: flowsnake
spec:
  ports:
  - name: k80
    port: 80
  selector:
    app: test-data
