sam-internal/k8s-out/prd/prd-minikube-small-flowsnake/nginx-ingress-controller-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-controller
  namespace: flowsnake
spec:
  ports:
  - name: http
    nodePort: 30080
    port: 80
    protocol: TCP
  - name: https
    nodePort: 30443
    port: 443
    protocol: TCP
  selector:
    k8s-app: nginx-ingress-lb
  type: NodePort
